--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
        <i class="fas fa-bars"></i>
      </div>
 
-     <nav>
+   <nav>
      <div class="pestaña">
-       <a href="#">Historia</a>
+       <a href="assets/html/historia.html" target="_parent">Historia</a>
+      
      </div>
 
      <div class="pestaña">
-      <a href="#"> Productos</a>
+      <a href="assets/html/productos.html" target="_parent">Productos</a>
     </div>
 
     <div class="pestaña">
-      <a href="#">¿Cómo reservar?</a>
+      <a href="assets/html/reservas.html" target="_parent">¿Cómo reservar?</a>
     </div>
 
     <div class="pestaña">
-      <a href="#">Contacto</a>
+      <a href="assets/html/contacto.html" target="_parent">Contacto</a>
     </div>
 
      </nav>
