--- a/index.html
+++ b/index.html
@@ -64,17 +64,16 @@
 
      <section class="galeria">
        <article class="foto">
-         <img src="layouts/imagenes/8.jpg" alt="foto 1">
+         <img src="layouts/imagenes/8.jpg" alt="foto 1" title="Bombones de Chocolate Originales">
        </article>
        <article class="foto">
-        <img src="layouts/imagenes/9.jpg" alt="foto 2">
+        <img src="layouts/imagenes/9.jpg" alt="foto 2" title="Cookies Decoradas en Glasé Real">
       </article>
       <article class="foto">
-        <img src="layouts/imagenes/10.jpg" alt="foto 3">
+        <img src="layouts/imagenes/10.jpg" alt="foto 3" title="Cookies Temáticas">
       </article>
-
       <article class="foto">
-        <img src="layouts/imagenes/11.jpg" alt="foto 4">
+        <img src="layouts/imagenes/11.jpg" alt="foto 4" title="Desayunos Personalizados">
       </article>
 
      </section>
