--- a/index.html
+++ b/index.html
@@ -90,14 +90,12 @@
 
    <div class="col-sm-12 col-lg-6 redes">
      <h5 class="tipografia">Seguinos en nuestras Redes Sociales:</h5>
-     <ul class="tipografia">
-       <li>Instagram: patisserie.design.mendoza </li>
-       <li>Facebook: Patisserie Design Mendoza</li>
-       <li>Whatsapp: (+54) 261 5251275</li> <a href="https:wa.me/5492615251275"> Envíanos tu mensaje aquí!</a> 
+      <ul class="tipografia">
+        <li>Instagram: patisserie.design.mendoza </li> <a href="https://www.instagram.com/invites/contact/?i=1t17wk7gshff0&utm_content=hpfy2rz">Instagram</a>
+        <li>Facebook: Patisserie Design Mendoza</li> <a href=" https://www.facebook.com/Patisserie-Design-104866344327275"> Facebook</a> 
+        <li>Whatsapp: (+54) 261 5251275</li> <a href="https:wa.me/5492615251275"> Envíanos tu mensaje aquí!</a> 
      </ul>
    </div>
-
-
 
   </section>
 
